# FrameFlow

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  build.bat  index.html  package.json  tsconfig.node.json  vite.config.ts
docs/: QA_CHECKLIST.md
schemas/: events.schema.json  project.schema.json
scripts/: download-ffmpeg.ps1  qa-smoke.mjs  sync-version.mjs
src/: App.css  App.tsx  i18n.ts  index.css  recordingOverlay.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/algorithm/: camera_engine.rs  cursor_smoothing.rs  mod.rs
src-tauri/src/capture/: audio_loopback.rs  mod.rs  preview.rs  recorder.rs  state.rs
src-tauri/src/commands/: capture.rs  cursor.rs  export.rs  mod.rs  project.rs
src-tauri/src/models/: events.rs  mod.rs  project.rs
src-tauri/src/telemetry/: logger.rs  mod.rs  ui_context.rs
src/components/: LanguageSwitcher.css  LanguageSwitcher.tsx  Navigation.css  Navigation.tsx  RecordingOverlay.css  RecordingOverlay.tsx  ThemeSwitcher.css  ThemeSwitcher.tsx
src/hooks/: useTheme.ts
src/locales/: ar.json  cs.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  kk.json  ko.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh.json
src/screens/: Edit.css  Edit.tsx  Export.css  Export.tsx  Record.css  Record.tsx
src/types/: events.ts  project.ts
