[package]
name = "neuroscreencaster"
version = "0.1.5"
edition = "2021"

[lib]
name = "neuroscreencaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
windows-capture = "1"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse"] }
dirs = "5"
rdev = "0.5"
uiautomation = "0.2"
base64 = "0.22"
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = false
opt-level = 0
strip = true
incremental = true

[profile.release-fast]
inherits = "release"
